style.css
.open-sans {
  font-family: "Open Sans", sans-serif;
  font-optical-sizing: auto;
}
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body{
    background-color: rgba(255, 255, 255, 1);
}
#navbar{
    margin: 16px 130px;
}
#navbar .navbar-section .navbar-image{
    max-width: 139px;
}
#navbar .navbar-section{
    display: flex;
    justify-content: space-between;
    align-items: center;
}
#navbar .navbar-section .navbar-list li{
    list-style-type: none;
    font-size: 16px;
    font-weight: 500;
    
}
#navbar .navbar-section .navbar-list a{
    text-decoration: none;
    color: rgba(0, 0, 0, 1);
}
#navbar .navbar-section .navbar-list ul{
    display: flex;
    gap: 32px;
}
#navbar .navbar-section .navbar-button button{
    background-color: rgba(70, 145, 101, 1);
    color:  rgba(255, 255, 255, 1);
    border-style: none;
    border-radius: 4px;
    padding: 12.5px 16px;
    font-size: 16px;
    font-weight: 600;
}
section{
    /* background: url(./assets/hero-bg.png); */
    /* background-repeat: no-repeat;  */
    
}
#banner .banner-btn button{
    font-size: 16px;
    font-weight: 500;
    color: rgba(70, 145, 101, 1);
    border-style: none;
    border-radius: 1000px;
    padding: 8px 12px;
    background-color: rgba(255, 255, 255, 1);
    margin-bottom: 16px;
    margin-top: 123.5px;
}
#banner .banner-text .t1{
    color: rgba(255, 255, 255, 1);
    font-size: 72px;
    /* font-weight: 700;
    line-height: 84px; */
}
#banner .banner-text .t2{
    color: rgba(48, 184, 104, 1);
    font-size: 72px;
    /* font-weight: 700;
    line-height: 84px; */
    margin-bottom: 16px;
}
#banner .banner-text{
    font-weight: 700;
    line-height: 84px;
    margin-bottom: 32px;
}
#banner .banner-text p{
    color: rgba(255, 255, 255, 1);
    font-size: 18px;
    font-weight: 400;
    line-height: 24px;
}
#banner .banner-button button{
    color: rgba(255, 255, 255, 1);
    font-size: 16px;
    font-weight: 600;
    display: flex;
    justify-content: center;
    align-items: center;
}
#banner .banner-button{
    display: flex;
    gap: 16px;
    margin-bottom: 179.5px;
}
#banner .banner-button .banner-button1{
    border-radius: 4px;
    background-color: rgba(70, 145, 101, 1);
    border: none;
    padding: 16.5px 16px;
    font-size: 16px;
    font-weight: 600px;
    gap: 0px 10px;
}
#banner .banner-button .banner-button2{
    border-radius: 4px;
    background-color: rgba(70, 145, 101, 0);
    border: none;
    padding: 16.5px 16px;
    font-size: 16px;
    font-weight: 600px;
    border: 1px solid rgba(255, 255, 255, 1);
    gap: 0px 10px;
}
#banner{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    max-width: 1600px;
    text-align: center;
    background: url(./assets/hero-bg.png);
    background-repeat: no-repeat;
}
#section2 .hp h1{
    color: rgba(0, 25, 49, 1);
    font-size: 48px;
    font-weight: 700;
}
#section2 .hp p{
    font-size: 16px;
    font-weight: 400;  
}
#section2 .hp{
    margin-top: 55px;
    text-align: center;

}
#section2 .imgcon .imgin img{
    border-radius: 50%;
    background: rgba(249, 85, 85, 1);
    padding: 5px;
}
#section2 .imgcon{
    display: flex;
    justify-content: space-around;
    margin: 44px 130px 0px;
    gap: 24px;
    text-align: center;
}
#section2 .imgcon .imgin{
    background-color: rgba(255, 255, 255, 1);
    border-radius: 8px;
    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.06);
    padding: 69.5px 24px;
}
#section3{
    display: flex;
    margin: 120px;
    align-items: center;
    gap: 60px;
    background-color: rgba(255, 255, 255, 1)
}
#section3 .section3-img img{
    max-width: 600px;
}
.section3-text-list .section3-text .p1{
    font-size: 16px;
    font-weight: 500;
    color: rgba(70, 145, 101, 1);
    margin-bottom: 16px;
}
.section3-text-list .section3-text h3{
    font-size: 48px;
    font-weight: 700;
    color: rgba(0, 25, 49, 1);
    margin-bottom: 16px;
}
.section3-text-list .section3-text .p2{
    font-size: 16px;
    font-weight: 400;
    color:  rgba(98, 115, 130, 1);
    margin-bottom: 40px;
}
.section3-text-list .section3-list li{
    list-style-type: none;
    color: rgba(0, 25, 49, 1);
    display: flex;
    /* jani na kemne display flex deyate image er text aligned hoye gelo akta line e, supports session e jigassha korte hobe. */
}

